# AAED

./: CMakeLists.txt  README.md  graficas-eps.plot  main.cpp
practica_1/: ej1.cpp  ej1.h  ej2.cpp  ej2.h  ej3.cpp  ej3.h  ej4.cpp  ej4.h  ej5.cpp  ej5.h
practica_2/: analisis_empirico.cpp  analisis_empirico.h  datos_grafica.h  ordenacion.cpp
