cmake_minimum_required(VERSION 3.19)
project(AAED)

set(CMAKE_CXX_STANDARD 14)

add_executable(AAED main.cpp practica_1/ej1.cpp practica_1/ej2.cpp practica_1/ej1.h practica_1/ej2.h practica_1/ej3.h practica_1/ej3.cpp practica_1/ej4.cpp practica_1/ej4.h practica_1/ej5.cpp practica_1/ej5.h practica_2/ordenacion.cpp practica_2/ordenacion.h practica_2/analisis_empirico.cpp practica_2/analisis_empirico.h practica_2/datos_grafica.h)

